force-app/main/default/objects/conference360__Form_Submission_Answer__c/fields/conference360__Answer__c.field-meta.xml
<CustomField>
    <fullName>conference360__Answer__c</fullName>
    <label>Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>