force-app/main/default/objects/conference360__Form_Submission_Answer__c/fields/conference360__Answer_Date__c.field-meta.xml
<CustomField>
    <fullName>conference360__Answer_Date__c</fullName>
    <label>Answer Date</label>
    <type>Date</type>
</CustomField>