force-app/main/default/objects/conference360__Form_Submission_Answer__c/fields/conference360__Answer_Mapped__c.field-meta.xml
<CustomField>
    <fullName>conference360__Answer_Mapped__c</fullName>
    <label>Answer Mapped</label>
    <type>DateTime</type>
</CustomField>