force-app/main/default/objects/conference360__Form_Submission_Answer__c/fields/conference360__Answer_Number__c.field-meta.xml
<CustomField>
    <fullName>conference360__Answer_Number__c</fullName>
    <label>Answer Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>