force-app/main/default/objects/conference360__Form_Submission_Answer__c/fields/conference360__Answer_Text_Long__c.field-meta.xml
<CustomField>
    <fullName>conference360__Answer_Text_Long__c</fullName>
    <label>Answer Text Long</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>