force-app/main/default/objects/conference360__Form_Submission_Answer__c/fields/conference360__File_Upload_Key__c.field-meta.xml
<CustomField>
    <fullName>conference360__File_Upload_Key__c</fullName>
    <externalId>true</externalId>
    <label>File Upload Key</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>