force-app/main/default/objects/conference360__Form_Submission_Answer__c/fields/conference360__Form_Element_Type__c.field-meta.xml
<CustomField>
    <fullName>conference360__Form_Element_Type__c</fullName>
    <formula>TEXT(conference360__Form_Element__r.conference360__Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form Element Type</label>
    <type>Text</type>
</CustomField>