force-app/main/default/objects/conference360__Form_Submission_Answer__c/fields/conference360__Form_Submission__c.field-meta.xml
<CustomField>
    <fullName>conference360__Form_Submission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Submission</label>
    <referenceTo>conference360__Form_Submission__c</referenceTo>
    <relationshipLabel>Form Submission Answer</relationshipLabel>
    <relationshipName>Form_Submission_Answer</relationshipName>
    <type>Lookup</type>
</CustomField>