force-app/main/default/objects/conference360__Form_Submission_Answer__c/fields/conference360__Mapping_Error__c.field-meta.xml
<CustomField>
    <fullName>conference360__Mapping_Error__c</fullName>
    <label>Mapping_Error__c</label>
    <type>TextArea</type>
</CustomField>